# lerobot-humanoid-identification

./: .gitignore  .gitmodules  AGENT.md  README.md  __init__.py  helper.py  pyproject.toml
cmaes/: __init__.py  dataset_loader.py  parallel_jointwise_cmaes.py  pool_joint_cost.py  run_cmaes_pool_all_joints.py
docs/: class_diagram.md
identification_2/: __init__.py
models/: __init__.py  rescale_delay_log_timebase.py
models/lerobot_humanoid/: __init__.py  robot_constants.py
results/baseline_controller_v1/pool_jointwise_20260403_132618/: config.yaml  summary_partial.yaml
results/baseline_controller_v1/pool_jointwise_20260403_132618/left_ankle_pitch/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/left_ankle_roll/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/left_hipx/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/left_hipy/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/left_hipz/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/left_knee/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/right_ankle_pitch/: best_joint_result.yaml  history.csv
results/baseline_controller_v1/pool_jointwise_20260403_132618/right_ankle_roll/: best_joint_result.yaml  history.csv
simulator/: README.md  __init__.py  config.py  mjcf_paths.py  robot_spec.py  runtime.py
(+1021 files in other folders)
